    UnaryExpression().

  - [feature] Enhanced GenericFunction and func.*
    to allow for user-defined GenericFunction
    subclasses to be available via the func.*
    namespace automatically by classname,
    optionally using a package name, as well
    as with the ability to have the rendered
    name different from the identified name
    in func.*.

  - [changed] Most classes in expression.sql
    are no longer preceded with an underscore,
    i.e. Label, SelectBase, Generative, CompareMixin.
    _BindParamClause is also renamed to
    BindParameter.   The old underscore names for
    these classes will remain available as synonyms
    for the foreseeable future.

  - [feature] The Inspector object can now be
    acquired using the new inspect() service,
    part of [ticket:2208]

  - [feature] The column_reflect event now
    accepts the Inspector object as the first
    argument, preceding "table".   Code which
    uses the 0.7 version of this very new
    event will need modification to add the
    "inspector" object as the first argument.
    [ticket:2418]

  - [feature] The behavior of column targeting
    in result sets is now case sensitive by
    default.   SQLAlchemy for many years would
    run a case-insensitive conversion on these values,
    probably to alleviate early case sensitivity
    issues with dialects like Oracle and
    Firebird.   These issues have been more cleanly
    solved in more modern versions so the performance
    hit of calling lower() on identifiers is removed.
    The case insensitive comparisons can be re-enabled
    by setting "case_insensitive=False" on
    create_engine().  [ticket:2423]

  - [feature] The "unconsumed column names" warning emitted
    when keys are present in insert.values() or update.values()
    that aren't in the target table is now an exception.
    [ticket:2415]

  - [feature] Added "MATCH" clause to ForeignKey,
    ForeignKeyConstraint, courtesy Ryan Kelly.
    [ticket:2502]
